# miniutils

./: .gitignore  README.md  pyproject.toml
miniutils/: cli.py  quote.py
miniutils/commands/: convert.py  todo.py  weather.py
tests/: test_smoke.py
