[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "miniutils"
version = "0.1.0"
description = "A small CLI toolbox for learning Git workflow"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
miniutils = "miniutils.cli:main"

[tool.setuptools.packages.find]
include = ["miniutils*"]
